--- a/aula 12/aula 12.html
+++ b/aula 12/aula 12.html
@@ -11,6 +11,36 @@
     a[2]=120;
     a[7]=0;
     console.log(a);
+    var fibonacci =[];
+    fibonacci[0]=1;
+    fibonacci[1]=1;
+    var c =2 ;
+    while(c<100){
+        fibonacci[c]= fibonacci[c-1] + fibonacci [c-2];
+        c++;
+    }
+    console.log(fibonacci);
+
+    var fibonacci =[];
+    fibonacci[0]=1;
+    fibonacci[1]=1;
+ 
+    for (var v =2; v<100;v++)
+    {
+        fibonacci[v]= fibonacci[v-1] + fibonacci [v-2];
+    }
+    console.log(fibonacci);
+    
+    var fibonacci3 =[];
+    fibonacci3[0]=1;
+    fibonacci3[1]=1;
+    var c =2 ;
+    while(c<100){
+        fibonacci3[c]= fibonacci3[c-1] + fibonacci3 [c-2];
+        c++;
+    }
+    console.log(fibonacci3);
+
     </script>
 </body>
 </html>
