--- a/aula 12/aula 12.html
+++ b/aula 12/aula 12.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 12</title>
 </head>
-<body>
-    <script> 
-    var a = [];
-    a[2]=120;
-    a[7]=0;
-    console.log(a);
-    var fibonacci =[];
-    fibonacci[0]=1;
-    fibonacci[1]=1;
-    var c =2 ;
-    while(c<100){
-        fibonacci[c]= fibonacci[c-1] + fibonacci [c-2];
-        c++;
-    }
-    console.log(fibonacci);
 
-    var fibonacci =[];
-    fibonacci[0]=1;
-    fibonacci[1]=1;
- 
-    for (var v =2; v<100;v++)
-    {
-        fibonacci[v]= fibonacci[v-1] + fibonacci [v-2];
-    }
-    console.log(fibonacci);
-    
-    var fibonacci3 =[];
-    fibonacci3[0]=1;
-    fibonacci3[1]=1;
-    var c =2 ;
-    while(c<100){
-        fibonacci3[c]= fibonacci3[c-1] + fibonacci3 [c-2];
-        c++;
-    }
-    console.log(fibonacci3);
+<body>
+    <script>
+        var a = [];
+        a[2] = 120;
+        a[7] = 0;
+        console.log(a);
+        var fibonacci = [];
+        fibonacci[0] = 1;
+        fibonacci[1] = 1;
+        var c = 2;
+        while (c < 100) {
+            fibonacci[c] = fibonacci[c - 1] + fibonacci[c - 2];
+            c++;
+        }
+        console.log(fibonacci);
+
+        var fibonacci = [];
+        fibonacci[0] = 1;
+        fibonacci[1] = 1;
+
+        for (var v = 2; v < 100; v++) {
+            fibonacci[v] = fibonacci[v - 1] + fibonacci[v - 2];
+        }
+        console.log(fibonacci);
+
+        var fibonacci3 = [];
+        fibonacci3[0] = 1;
+        fibonacci3[1] = 1;
+
+        while (fibonacci3.length < 100) {
+            fibonacci3[fibonacci3.length] = fibonacci3[fibonacci3.length - 1] + fibonacci3[fibonacci.length - 2];
+        }
+        console.log(fibonacci3);
 
     </script>
 </body>
+
 </html>
