--- a/aula13/aula13.html
+++ b/aula13/aula13.html
@@ -8,50 +8,70 @@
   <style>
     h1 {
       text-align: center;
+
+      background-color: pink;
     }
+
+    body {
+      background-color: palevioletred;
+    }
+
+    img {
+      width: 50%;
+     
+
+    } div {text-align: center;}
+ 
   </style>
 </head>
 
 <body>
+  <main>
+    <div class="row">
+      <div class="col-4 offset-4">
+        <h1>calculadora</h1>
+        <div class="row">
+          <div class="col-4">
+            <input type="text" class="form-control" id="n1"></input>
+          </div>
 
-  <div class="row">
-    <div class="col-4 offset-4">
-      <h1>calculadora</h1>
-      <div class="row">
-        <div class="col-4">
-          <input type="text" class="form-control" id="n1"></input>
-        </div>
-
-        <div class="col-4">
-          <input type="text" class="form-control" id="n2"></input>
-        </div>
-        <div class="col-4">
-          <input type="text" class="form-control" id="resultado" disabled></input>
-        </div>
-      </div>
-      <div class="row mt-3">
-        <div class="col-8">
-
-        </div>
-        <div class="col-4">
-          <div class="d-grid gap-2">
-            <button class="btn btn-primary" type="button"> onClick="somar()"</button>
-            <button class="btn btn-primary" type="button">-</button>
-            <button class="btn btn-primary" type="button">*</button>
-            <button class="btn btn-primary" type="button">/</button>
+          <div class="col-4">
+            <input type="text" class="form-control" id="n2"></input>
+          </div>
+          <div class="col-4">
+            <input type="text" class="form-control" id="resultado" disabled></input>
           </div>
         </div>
-      </div>
+        <div class="row mt-3">
+          <div class="col-6">
+            <div class="d-grid gap-2">
+              <button class="btn btn-dark" onClick="somar()">+</button>
+              <button class="btn btn-dark" onClick="subtrair()">-</button>
+            </div>
+          </div>
+
+          <div class="col-6">
+            <div class="d-grid gap-2">
+              <button class="btn btn-dark" onClick="multiplicar()">*</button>
+              <button class="btn btn-dark" onClick="dividir()">/</button>
+            </div>
+          </div>
+        </div>
+        <div>
+          <img
+            src="https://img.pikbest.com/png-images/20190918/cartoon-snail-loading-loading-gif-animation_2734139.png!sw800"
+            alt="">
+        </div>
+  </main>
 
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+  <script src="aula13.js">
 
-      <script src="aula13.js">
-
-      </script>
+  </script>
 </body>
 
 </html>
