--- a/aula 14/aula14.html
+++ b/aula 14/aula14.html
@@ -139,13 +139,14 @@
                         </div>
                         <div class="col-3">
                             <div class="d-grid gap-2">
-                                <button class="btn btn-dark" type="button">/</button>
-                                <button class="btn btn-dark" type="button">x</button>
-                                <button class="btn btn-dark" type="button">-</button>
+                                <button class="btn btn-dark" type="button"onclick="dividir()">/</button>
+                                <button class="btn btn-dark" type="button"onclick="multiplicar()">x</button>
+                                <button class="btn btn-dark" type="button"onclick="subtrair()">-</button>
                                 <button class="btn btn-dark" type="button"onclick="efetuar_soma()">+</button>
                                 <button class="btn btn-dark" type="button"onclick="resultado()">=</button>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
 
