--- a/aula 14/aula14.html
+++ b/aula 14/aula14.html
@@ -67,7 +67,7 @@
                                 </div>
                                 <div class="col-4">
                                     <div class="d-grid gap-2">
-                                        <button class="btn btn-dark" type="button">%</button>
+                                        <button class="btn btn-dark" type="button"onclick="porcentagem()">%</button>
                                     </div>
                                 </div>
                             </div>
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="col-4">
                                     <div class="d-grid gap-2">
-                                        <button class="btn btn-dark" type="button">.</button>
+                                        <button class="btn btn-dark" type="button"onclick="add_ponto()">.</button>
                                     </div>
                                 </div>
                             </div>
