--- a/aula 14/aula14.html
+++ b/aula 14/aula14.html
@@ -50,11 +50,11 @@
                     <div class="row">
                         <div class="col-3">
                             <div class="d-grid gap-2">
-                                <button class="btn btn-danger" type="button">C</button>
-                                <button class="btn btn-dark" type="button">MR</button>
-                                <button class="btn btn-dark" type="button">MC</button>
-                                <button class="btn btn-dark" type="button">M+</button>
-                                <button class="btn btn-dark" type="button">M-</button>
+                                <button class="btn btn-danger" type="button"onclick="apagar()">C</button>
+                                <button class="btn btn-dark" type="button"onclick="mostrarMemoria()">MR</button>
+                                <button class="btn btn-dark" type="button"onclick="apagarMemoria()">MC</button>
+                                <button class="btn btn-dark" type="button"onclick="addNumero()">M+</button>
+                                <button class="btn btn-dark" type="button" onclick="menosNumero()">M-</button>
                             </div>
                         </div>
 
@@ -67,7 +67,7 @@
                                 </div>
                                 <div class="col-4">
                                     <div class="d-grid gap-2">
-                                        <button class="btn btn-dark" type="button">%</button>
+                                        <button class="btn btn-dark" type="button"onclick="porcentagem()">%</button>
                                     </div>
                                 </div>
                             </div>
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="col-4">
                                     <div class="d-grid gap-2">
-                                        <button class="btn btn-dark" type="button">.</button>
+                                        <button class="btn btn-dark" type="button"onclick="add_ponto()">.</button>
                                     </div>
                                 </div>
                             </div>
