--- a/aula 14/aula14.html
+++ b/aula 14/aula14.html
@@ -8,12 +8,12 @@
     <style>
         h1 {
             text-align: center;
-
-            background-color: pink;
+color: white;
+            background-color: rgb(0, 0, 0);
         }
 
         body {
-            background-color: rgb(255, 0, 115);
+            background-color: rgb(0, 0, 0);
         }
 
         img {
@@ -31,7 +31,7 @@
             padding: 20px;
             max-width: 1200px;
             margin: 100px auto;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(254, 237, 0);
         }
  
     </style>
@@ -39,30 +39,22 @@
 
 <body>
     <main>
-        <div class="row">
+        <div class="row mt-2">
             <div class="col-4 offset-4">
-                <h1>calculadora</h1>
+                <h1>Calculadora</h1>
                 <div class="row">
                     <div class="col-12">
                         <input type="text" class="form-control" id="valor"></input>
                     </div>
 
-                    <div class="row">
+                    <div class="row mt-2">
                         <div class="col-3">
                             <div class="d-grid gap-2">
-<<<<<<< HEAD
-                                <button class="btn btn-danger" type="button"onclick="apagar()">C</button>
+                                <button class="btn btn-danger" type="button"onclick="apagar_td()">C</button>
                                 <button class="btn btn-dark" type="button"onclick="mostrarMemoria()">MR</button>
                                 <button class="btn btn-dark" type="button"onclick="apagarMemoria()">MC</button>
                                 <button class="btn btn-dark" type="button"onclick="addNumero()">M+</button>
                                 <button class="btn btn-dark" type="button" onclick="menosNumero()">M-</button>
-=======
-                                <button class="btn btn-danger" type="button"onclick="apagarTudo()">C</button>
-                                <button class="btn btn-dark" type="button"onclick="motrarMemoria()">MR</button>
-                                <button class="btn btn-dark" type="button"onclick="apagarMemoria()">MC</button>
-                                <button class="btn btn-dark" type="button"onclick="addNumero()">M+</button>
-                                <button class="btn btn-dark" type="button"onclick="menosNumero()">M-</button>
->>>>>>> 389295833efc6147988b9cbefee3f6e73e542517
                             </div>
                         </div>
 
@@ -159,7 +151,7 @@
                 </div>
 
                 <div>
-                    <img src="https://media.tenor.com/xu144P488qAAAAAj/cute-calculator.gif" alt="">
+                    <img src="" alt="">
                 </div>
 
 
