--- a/atividadeforms.html
+++ b/atividadeforms.html
@@ -28,7 +28,7 @@
                 <label>Tipo:</label>
 
                 <select class="form-select">
-                    <optgroup label="teste" />
+                    <optgroup label="teste" >
                     <option>tipo 1</option>
                     <option>tipo 2</option>
                     <option>tipo 3</option>
