--- a/aula 21/aula21.html
+++ b/aula 21/aula21.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 <body>
-  
-    <div class="mb-3">
+  <div class="row mt-2">
+    <div class="mt-2">
+      <form method="post" action="formulario.php">
         <label for="exampleFormControlInput1" class="form-label">Nome</label>
         <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Seu nome">
       </div>
-    <div class="mb-3">
+    <div class=row mt-2">
         <label for="exampleFormControlInput1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
       </div>
       <button type="button" class="btn btn-primary">Enviar</button>
+    </form>
       
      
 </body>
